Update Wordle frontend by styling the remaining words list. This should avoid word wrapping.

--- a/static/wordle/styles.css
+++ b/static/wordle/styles.css
@@ -101,7 +101,16 @@ progress {
 
 .words {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
   justify-items: center;
-  gap: 10px;
+  gap: 20px;
+}
+
+.words div {
+  text-wrap: nowrap;
+  overflow: hidden;
+  user-select: none;
+  padding: 10px;
+  border-style: solid;
+  border-radius: 25px;
 }
